fix footer alignment for certain widths

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -509,6 +509,7 @@ nav ul li {
   flex-direction: row;
   background-color: #727778;
   min-height: 225px;
+  margin-top: auto;
   width: auto;
   overflow: hidden;
 }
